--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "gettingstarted",
   "version": "1.1.0",
   "description": "",
-  "main": "index.js",
+  "main": "index.ts",
   "scripts": {
     "dev": "flatfile develop index.js",
     "deploy": "flatfile deploy index.js"
@@ -11,9 +11,9 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
-    "@flatfile/api": "1.5.19",
-    "@flatfile/listener": "0.3.11",
-    "@flatfile/plugin-record-hook": "0.1.11",
+    "@flatfile/api": "1.5.20",
+    "@flatfile/listener": "0.3.13",
+    "@flatfile/plugin-record-hook": "1.0.1",
     "axios": "^1.4.0",
     "flatfile": "^3.5.8"
   },
