--- a/package.json
+++ b/package.json
@@ -2,9 +2,9 @@
   "name": "gettingstarted",
   "version": "1.1.0",
   "description": "",
-  "main": "index.js",
+  "main": "index.ts",
   "scripts": {
-    "dev": "flatfile develop typescript/index.ts",
+    "develop": "flatfile develop ./index.ts",
     "deploy": "flatfile deploy typescript/index.ts",
     "create-workbook": "bash ./scripts/create-workbook.sh"
   },
@@ -15,6 +15,9 @@
     "@flatfile/api": "1.5.24",
     "@flatfile/listener": "0.3.15",
     "@flatfile/plugin-record-hook": "1.1.1",
+    "@flatfile/plugin-xlsx-extractor": "^1.7.2",
+    "@flatfile/plugin-automap": "0.0.3",
+    "date-fns": "2.30.0",
     "axios": "^1.5.0",
     "flatfile": "^3.5.9"
   },
