--- a/package.json
+++ b/package.json
@@ -20,7 +20,7 @@
     "@flatfile/api": "latest",
     "@flatfile/listener": "latest",
     "@flatfile/plugin-record-hook": "latest",
-    "flatfile": "latest",
+    "flatfile": "^3.7.0",
     "moment": "^2.30.1"
   },
   "devDependencies": {
